refactor FormField component to support dynamic input types and error handling
enhance InputErrorMessage component with accessibility attributes

develop ProductGallery component with carousel functionality

update product page to correctly handle main photo URL

update global CSS variables for improved color scheme

enhance utility functions for image URL generation and class name merging

--- a/src/components/contacts.astro
+++ b/src/components/contacts.astro
@@ -1,7 +1,7 @@
 ---
 import { WEB3FORMS_PUBLIC_ACCESS_KEY } from "astro:env/server";
 
-import { ContactFormReact } from "./react/contact-form/contact-form-react.jsx";
+import { ContactForm } from "./react/contact-form/contact-form";
 import BlockTitle from "./ui/block-title.astro";
 import ContactDetails from "./ui/contact-details.astro";
 import Container from "./ui/container.astro";
@@ -12,7 +12,7 @@ import Container from "./ui/container.astro";
     <BlockTitle appearanceMode="dark" title="Kontaktai" />
     <div class="contacts-container">
       <ContactDetails />
-      <ContactFormReact
+      <ContactForm
         client:visible
         web3formsPublicAccessKey={WEB3FORMS_PUBLIC_ACCESS_KEY}
       />
@@ -39,6 +39,7 @@ import Container from "./ui/container.astro";
       grid-template-columns: auto;
       gap: var(--default-spacing);
     }
+
     .contacts-container > :first-child {
       order: 2;
       text-align: center;
