--- a/src/components/product/product-page.astro
+++ b/src/components/product/product-page.astro
@@ -1,9 +1,10 @@
 ---
 import type { Product } from "@/schemas/contentful-transformed.types";
 
-import { RelatedProductCarousel } from "../react/related-product/related-product-carousel";
-import ContentBlock from "../ui/content-block.astro";
-import LinkButton from "../ui/link-button.astro";
+import { RelatedProductCarousel } from "@/components/react/related-product/related-product-carousel";
+import ContentBlock from "@/components/ui/content-block.astro";
+import LinkButton from "@/components/ui/link-button.astro";
+
 import ProductInfo from "./product-info.astro";
 import ProductMedia from "./product-media.astro";
 
