--- a/src/components/ui/price.astro
+++ b/src/components/ui/price.astro
@@ -1,9 +1,9 @@
 ---
+import { VAT } from "@/constants";
+
 type Props = {
   price?: number;
 };
-
-const VAT = 1.21;
 
 const { price }: Props = Astro.props;
 
