--- a/src/pages/products/[slug].astro
+++ b/src/pages/products/[slug].astro
@@ -1,14 +1,13 @@
 ---
 import { type CollectionEntry, getCollection } from "astro:content";
-import { renderRichTextToPlainText } from "@/lib/rich-text";
 
 import type { Product } from "@/schemas/contentful-transformed.types";
-
-import { getMainPhotoUrl } from "@/utils";
 
 import Contacts from "@/components/contacts.astro";
 import ProductPage from "@/components/product/product-page.astro";
 import Layout from "@/layouts/Layout.astro";
+import { renderRichTextToPlainText } from "@/lib/rich-text";
+import { getMainPhotoUrl } from "@/utils";
 
 type Props = { product: Product };
 
@@ -30,8 +29,8 @@ const { product } = Astro.props;
 ---
 
 <Layout
-  image={getMainPhotoUrl(product.mainPhoto?.url)}
   description={renderRichTextToPlainText(product.description)}
+  image={getMainPhotoUrl(product.mainPhoto.url)}
   title={product.title}>
   <ProductPage product={product} />
   <Contacts />
