refactor related product carousel, card and add new styles; update dependencies and fix import paths

--- a/src/components/product/product-item.astro
+++ b/src/components/product/product-item.astro
@@ -73,7 +73,7 @@ const imageSrc = getMainPhotoUrl(mainPhoto.url, 80);
   .image-container {
     flex: 1;
     background-color: var(--color-grey-light);
-    border-radius: 15px;
+    border-radius: var(--border-radius);
     width: 100%;
     max-height: 50rem;
     overflow: clip;
@@ -127,7 +127,7 @@ const imageSrc = getMainPhotoUrl(mainPhoto.url, 80);
         "desc"
         "media"
         "specs"
-        "back";
+        "related";
     }
   }
 
