--- a/src/components/react/product-gallery/product-gallery-thumb.module.css
+++ b/src/components/react/product-gallery/product-gallery-thumb.module.css
@@ -3,7 +3,7 @@
   width: 11rem;
   aspect-ratio: 1 / 1;
   background-color: var(--color-grey-light);
-  border-radius: 15px;
+  border-radius: var(--border-radius);
   overflow: clip;
   display: flex;
   justify-content: center;
@@ -12,6 +12,7 @@
   transition: background-color 0.2s ease-out;
   border: none;
   padding: 0;
+  user-select: none;
 }
 
 .embla-thumbs__slide:hover {
