--- a/src/components/react/product-gallery/product-gallery.module.css
+++ b/src/components/react/product-gallery/product-gallery.module.css
@@ -17,6 +17,8 @@
   min-width: 0;
   background-color: var(--color-grey-light);
   border-radius: var(--border-radius);
+  width: 100%;
+  max-height: 50rem;
   overflow: clip;
   display: flex;
   justify-content: center;
