remove view-transitions.css; disable view transitions in global styles for improved performance

--- a/src/components/product/product-media.astro
+++ b/src/components/product/product-media.astro
@@ -37,7 +37,7 @@ const transitionName = `photo-${slug}`;
         displayMode={displayMode}
         initialColor={initialColor}
         photos={allVariantPhotos}
-        transition:name={transitionName}
+        transitionName={transitionName}
       />
     ) : (
       <div class="product__img" transition:name={transitionName}>
