--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -153,6 +153,13 @@ svg {
   border: 0;
 }
 
+/* View Transitions */
+/* Disable the root (whole-page) cross-fade/slide */
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation: none;
+}
+
 /* Media Queries */
 @media only screen and (max-width: 28em) {
   html {
