add unset margin for popover elements

--- a/src/components/ui/navigation.astro
+++ b/src/components/ui/navigation.astro
@@ -49,6 +49,10 @@ const { links = headerLinks } = Astro.props;
     margin: 0;
   }
 
+  [popover] {
+    margin: unset;
+  }
+
   .mobile-menu[popover] {
     /* position: absolute; */
     /* position-anchor: --header; */
