--- a/src/components/ui/navigation.astro
+++ b/src/components/ui/navigation.astro
@@ -54,16 +54,10 @@ const { links = headerLinks } = Astro.props;
   }
 
   .mobile-menu[popover] {
-    /* position: absolute; */
-    /* position-anchor: --header; */
-    /* left: unset; */
-    /* right: 0; */
-    /* top: anchor(bottom); */
     border: none;
     padding: 0;
     margin: 0;
     width: 100%;
-    /* height: 100svh; */
     background: var(--color-grey-light);
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
@@ -87,13 +81,13 @@ const { links = headerLinks } = Astro.props;
       }
     }
 
-    @supports (transition-behavior: allow-discrete) {
+    /* @supports (transition-behavior: allow-discrete) {
       & {
         transition:
           display 0s allow-discrete,
           overlay 0s allow-discrete;
       }
-    }
+    } */
 
     @supports (position-anchor: --header) {
       & {
@@ -102,7 +96,7 @@ const { links = headerLinks } = Astro.props;
         top: anchor(bottom);
         right: 0;
         left: unset;
-        height: 100svh;
+        height: 100dvh;
       }
     }
 
@@ -110,9 +104,9 @@ const { links = headerLinks } = Astro.props;
       & {
         position: fixed;
         inset-inline: 0;
-        inset-block-start: var(--header-height, 74px);
+        inset-block-start: var(--header-height, 77px);
         inset-block-end: 0;
-        height: calc(100svh - var(--header-height, 74px));
+        height: calc(100dvh - var(--header-height, 77px));
       }
     }
   }
